# sherpa-com-mediator

./: .gitignore  .travis.yml  CMakeLists.txt  DEPENDENCIES.md  Makefile  README.md  TODO.md  ci_build.sh  defs.h  donkey.json  env.sh  genius.json  gossip_client.c  gossip_proxy.c  gossip_test.c  hawk.json  lcsm.json  logger.c  observer.c  operator1.json  peer.c  proxy.c  proxy.json  proxy.sh  rmax.json  rmax1.json  rover1.json  uav1.json  wasp.json
app/: CMakeLists.txt  fsmloader.c
doc/: DEPENDENCIES.md  Integration.md  msg.md
examples/: Makefile  curl_read.c  defs.h  encoder.c  encoder.json  line_controller.c  observer.c
examples/configs/: busy_genius.json  donkey.json  hawk1.json  wasp1.json  wasp2.json
examples/file_transfer/: Makefile  bandwidth_test.c  file_transfer.c  file_transfer_config.json  file_transfer_example.c
examples/messaging/: Makefile  local_config.json  messaging_example.c
examples/request_peers/: Makefile  request_peers_config.json  request_peers_example.c
include/: mediator.h
rfsmbinding/: CMakeLists.txt  Readme.md  rfsmbinding.c  rfsmbinding.h
scripts/: gen-rfsm.lua  solve-schema.lua  state_functions.lua  utils.lua
src/: sherpa_comm_mediator.c
test/: mediator_selftest.c
